--- a/Julia_practice/test.ipynb
+++ b/Julia_practice/test.ipynb
@@ -244,6 +244,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{Float64,1}:\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 1.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "z = zeros(10)\n",
+    "z[5] = 1\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Array{Int64,1},1}:\n",
+       " [10, 20, 30]\n",
+       " [10, 20, 30]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Z = [[10,20,30], [10,20,30]]\n",
+    "Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×3 reshape(::UnitRange{Int64}, 2, 3) with eltype Int64:\n",
+       " 0  2  4\n",
+       " 1  3  5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Z = reshape(0:5, (2,3))\n",
+    "Z"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
